--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ node_modules
 # Build and framework output
 .svelte-kit
 build
+dist
 .output
 .vercel
 .netlify
@@ -11,6 +12,7 @@ build
 coverage
 playwright-report
 test-results
+.npm-cache
 
 # Env
 .env
