--- a/package.json
+++ b/package.json
@@ -1,32 +1,47 @@
 {
   "name": "@lifi/lintent",
-  "private": true,
+  "private": false,
   "version": "0.1.0",
-  "type": "module",
-  "files": [
-    "src",
-    "tests"
-  ],
-  "exports": {
-    ".": "./src/index.ts",
-    "./types": "./src/types/index.ts",
-    "./types/*": "./src/types/*.ts",
-    "./intent": "./src/intent/index.ts",
-    "./intent/*": "./src/intent/*.ts",
-    "./api/*": "./src/api/*.ts",
-    "./helpers/*": "./src/helpers/*.ts",
-    "./compact/*": "./src/compact/*.ts",
-    "./testing/*": "./tests/*.ts",
-    "./*": "./src/*.ts"
+  "description": "Typescript library for OIF and LI.FI Intent",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/lifinance/intent.ts.git"
   },
+  "publishConfig": {
+    "access": "public"
+  },
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "files": [
+    "dist",
+    "README.md",
+    "LICENSE"
+  ],
+  "module": "./dist/index.js",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js",
+      "default": "./dist/index.js"
+    }
+  },
+  "type": "module",
+  "sideEffects": false,
   "scripts": {
-    "prepare": "husky",
+    "clean": "rm -rf dist/",
+    "prebuild": "bun run clean",
+    "build": "tsc --project tsconfig.build.json && node ./scripts/rewrite-dist-imports.mjs",
+    "lint:staged": "prettier -w",
+    "prepublishOnly": "bun run build && bun run check && bun run test",
     "test": "bun test",
     "check": "tsc --noEmit -p tsconfig.json",
-    "build": "tsc --noEmit -p tsconfig.json"
+    "coverage": "bun run test --coverage",
+    "coverage:lcov": "bun run coverage --coverage-reporter='lcov' --coverage-dir='./'"
   },
   "lint-staged": {
-    "*.{js,ts,svelte,css,md,json,html}": "prettier --write"
+    "*.ts": [
+      "bun run lint:staged"
+    ]
   },
   "dependencies": {
     "axios": "^1.9.0",
@@ -34,11 +49,10 @@
   },
   "devDependencies": {
     "@types/bun": "^1.3.8",
+    "bun": "^1.3.5",
     "husky": "9.1.7",
     "lint-staged": "16.1.0",
     "prettier": "3.4.2",
-    "prettier-plugin-svelte": "3.3.3",
-    "prettier-plugin-tailwindcss": "0.6.11",
     "typescript": "^5.6.3"
   }
 }
